# drf-pipeline-views

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  search.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
async/: index.html
conditionals/: index.html
docs/: async.md  conditional_logic_paths.md  conditionals.md  conf.py  index.md  index.rst  inference.md  logic_blocks.md  metadata.md  misc.md  quickstart.md  schema.md  serializer_inference.md
docs/css/: docs.css
inference/: index.html
logic_blocks/: index.html
metadata/: index.html
misc/: index.html
pipeline_views/: __init__.py  exceptions.py  inference.py  meta.py  mixins.py  schema.py  serializers.py  types.py  typing.py  utils.py  views.py
pipeline_views/typing/: __init__.py  general.py  openapi.py
quickstart/: index.html
schema/: index.html
search/: search_index.json
tests/: arg_spec_functions.py  conftest.py  test_endpoint.py  test_inference.py  test_metadata.py  test_mixins.py  test_schema.py  test_serializers.py  test_utils.py  test_views.py
tests/django/: settings.py  urls.py
tests/django/templates/: swagger-ui.html
tests/project/: settings.py  urls.py
